# superneuroabm

./: .gitignore  CHANGES.txt  LICENSE  README.md  README_GCP.md  conv2dt.py  pyproject.toml  requirements.txt  run_scnn_train.slurm  setup.py  step_func_code.py
SuperNeuroABM.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
examples/: custom_components_config.yaml  register_custom_network.py
scaling_analysis/: find_memory_limit.py  generate_network_examples.py  run_single_node_test.sh  submit_weak_scaling_parallel.sh  test_simple_weak_scaling.py  weak_1node_1to8gpus.sh  weak_1node_1to8gpus_profile.sh  weak_1to10nodes_sequential.sh  weak_1to20nodes_sequential.sh  weak_scaling_const_comm.py  weak_scaling_const_comm.sh  weak_scaling_const_density.py  weak_scaling_const_density.sh  weak_scaling_constcomm_3939840.out
superneuro/: model.py  neuron.py  synapse.py
superneuroabm/: __init__.py  component_base_config.yaml  izh_neuron.py  izh_soma.py  model.py  neuron.py  util.py
tests/: baseline_utils.py  basic_test.py  component_base_hyperparameter_config.yaml  find_memory_limit.py  learning_test.py  logic_gates_test.py  logic_gates_test_lif.py  plot_weak_scaling.py  run_tests_no_buffer.py  save_baselines.py  scalability_test.py  snn_model_test.py  stdp_test.py  step_func_code.py  test_internal_state_tracking.py  test_lif_mixed_synapses_mpi.py  test_memristive_stdp.py  test_memristive_synapse.py  test_micro_models.py  test_model_reset_stdp.py  test_mpi_comparison.py  test_quantized_stdp.py  test_registration_api.py  test_scnn_nmnist.py  test_spike_mask.py  (+10 more)
(+61 files in other folders)
